<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="@color/colorPrimaryLight"
    android:id="@+id/list_container"
    android:layout_marginTop="?attr/actionBarSize">

    <Button
        android:id="@+id/sort_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sort_by_date"
        android:backgroundTint="@color/colorAccent"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"  />

</android.support.constraint.ConstraintLayout>
